# crowcommand-py

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/crowcommand/: __init__ .py  __init__.py  client.py  internal_logger.py  logger.py
tests/: __init__.py  test_crowcommand.py
