[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crowcommand"
version = "0.1.3"
description = "Modern monitoring platform that combines log management, performance metrics, and AI-powered insights to help small teams monitor and debug their applications with minimal setup."
readme = "README.rst"
authors = [
  {name = "Samuel Edorodion", email = "sedorodion2003@gmail.com"}
]
maintainers = [
  {name = "Samuel Edorodion", email = "sedorodion2003@gmail.com"}
]
classifiers = [

]
license = {text = "Apache Software License 2.0"}
dependencies = [
  "loguru>=0.7.3",
  "requests>=2.32.3",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/samuelito22/crowcommand/issues"
changelog = "https://github.com/samuelito22/crowcommand/blob/master/changelog.md"
homepage = "https://github.com/samuelito22/crowcommand"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

